
* fixed bug #13903 (`https://gna.org/bugs/?13903') - filename of the
  temporary files can be passed to Wendy using the `--tmpfile' parameter

* used `mkstemp' function to create temporary filenames

* a wrapper script checks whether binaries needed by test cases are present
  and skips the test if necessary

* added improved Petri Net API files (faster parsing)

* updated maintainer scripts

Version 1.4
===========

* versions of used programs are collected in `testsuite.log' when running
  `make check'

* service automata (a.k.a. interaction graphs) can be created with `--sa'

* fixed bug #13651 (`https://gna.org/bugs/?13651') - adjusted parser to
  process empty markings

* added parameter `--mi' to store a mapping between the inner marking
  identifiers (integers) to actual Petri net markings (multisets of place
  names)

* added a hidden parameter `--im' to store information needed by Mia
  (`http://service-technology.org/mia') to calculate information for instance
  migration

Version 1.3
===========

* implemented the `receive before send' reduction rule
  (`--receiveBeforeSend'): if the waitstates of a knowledge bubble can be
  resolved by receiving, don't send - this reduction does not preserve all
  strategies, but will return a strategy if one exists

* implemented the `don't send in advance' reduction rule
  (`--waitstatesOnly'): only send a message to a knowledge bubble if it
  immediately resolves a waitstate - this reduction does not preserve all
  strategies, but will return a strategy if one exists

Version 1.2
===========

* implemented new OG file format - the deprecated format can still be used
  with `--fionaFormat' parameter which is implicitly used in case `-t OG' is
  used

* added "watermark" to generated operating guidelines (generator, platform,
  invocation string)

* using a GNU Autoconf's Autotest test suite

* the configure script checks if the Petri Net API was found and only
  compiles the local copy if necessary

Version 1.1