@@ -11,6 +11,8 @@
 @item added improved Petri Net API files (faster parsing)
 
 @item updated maintainer scripts
+
+@item Wendy can be configured with a configuration file, provided by parameter @option{--config} (see @url{http://www.gnu.org/software/gengetopt/gengetopt.html#Configuration-files} for more information). A standard configuration is created by the configure script and written to @file{src/wendy.conf}. When Wendy is executed, it checks for the file @file{wendy.conf} in the sysconfig folder (usually @file{/usr/local/etc}) and in the current directory. If neither file was found, Wendy tries to rely on standard options.
 @end itemize
 
 
