@@ -8,11 +8,17 @@ wendy_SOURCES = syntax_graph.yy lexic_graph.ll \
                 InnerMarking.h InnerMarking.cc \
                 Knowledge.h Knowledge.cc \
                 StoredKnowledge.h StoredKnowledge.cc \
+                verbose.cc verbose.h \
                 cmdline.c cmdline.h
+
+sysconf_DATA = wendy.conf
+
+# pass the sysconfdir to Wendy
+wendy_CPPFLAGS = -DSYSCONFDIR=\"$(sysconfdir)\"
 
 # only add the local Petri net API if necessary
 if COMPILE_PNAPI
-wendy_CPPFLAGS = -I$(top_srcdir)/libs
+wendy_CPPFLAGS += -I$(top_srcdir)/libs
 wendy_LDADD =  $(top_builddir)/libs/pnapi/libpnapi.a
 endif
 
