@@ -1,0 +1,26 @@
+/*****************************************************************************\
+ Mia -- calculating migration information
+
+ Copyright (C) 2009  Niels Lohmann <niels.lohmann@uni-rostock.de>
+
+ Mia is free software: you can redistribute it and/or modify it under the
+ terms of the GNU Affero General Public License as published by the Free
+ Software Foundation, either version 3 of the License, or (at your option)
+ any later version.
+
+ Mia is distributed in the hope that it will be useful, but WITHOUT ANY
+ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for
+ more details.
+
+ You should have received a copy of the GNU Affero General Public License
+ along with Mia.  If not, see <http://www.gnu.org/licenses/>. 
+\*****************************************************************************/
+
+#ifndef VERBOSE_H
+#define VERBOSE_H
+
+void status(const char* format, ...);
+void abort(unsigned int code, const char* format, ...);
+
+#endif
